# Harpocrates

./: .gitignore  .gitleaksignore  .pre-commit-hooks.yaml  Dockerfile.api  LICENSE  README.md  context.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  v0.2.0_instructions.md
.github/workflows/: publish.yml  secret-scan.yml
.taskmaster/: tasks.json
Harpocrates/: cli.py
Harpocrates/api/: __init__.py  config.py  exceptions.py  main.py  schemas.py
Harpocrates/cli/: __init__.py  commands.py
Harpocrates/core/: detector.py  result.py  scanner.py
Harpocrates/detectors/: __init__.py  base.py  entropy_detector.py  regex_patterns.py
Harpocrates/llm/: __init__.py  providers.py  verifier.py
Harpocrates/ml/: __init__.py  context.py  ensemble.py  ensemble_config.json  features.py  lightgbm_v1.txt  lightgbm_verifier.py  onnx_verifier.py  verifier.py  xgboost_v1.json
Harpocrates/scanner/: base.py  detector.py  entropy.py  models.py  regex_signatures.py
Harpocrates/training/: __init__.py  cross_validation.py  dataset.py  evaluate.py  train.py  train_model.py  train_two_stage.py
Harpocrates/utils/: __init__.py  file_loader.py  file_utils.py  path_filters.py  redaction.py
docs/: MERGE_ORDER.md
images/: ASSETS.md
scripts/: analyze_fp.py  convert_to_onnx.py  generate_go_nogo_report.py  generate_synthetic_data.py  train_experiments.py  train_experiments_v2.py  train_experiments_v3.py  train_v4.py
tests/: databaseconnector.py  test_cli.py  test_cli_lazy_imports.py  test_data_generator.py  test_detector.py  test_entropy.py  test_ml_features.py  test_ml_pipeline.py  test_ml_regression.py  test_ml_shortcuts.py  test_packaging.py  test_redaction.py  test_regex.py  test_scanner.py
(+30 files in other folders)
